--- a/www.nass.gov.ng/9ddcf3cbf4a27ee2d8629114e83fc1b76fef2c54.yml
+++ b/www.nass.gov.ng/9ddcf3cbf4a27ee2d8629114e83fc1b76fef2c54.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Mar 2018 23:20:50 GMT
+    - Thu, 22 Mar 2018 01:17:23 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=-wR81XK%2CL8ptWL4Q8B63m2; path=/
+    - PHPSESSID=nzyuZb2y45CUop8EoOngS0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Mar 2018 23:20:51 GMT
+recorded_at: Thu, 22 Mar 2018 01:17:23 GMT
