--- a/www.nass.gov.ng/8aff5f95105683ad52849c70380b4af20fa57e75.yml
+++ b/www.nass.gov.ng/8aff5f95105683ad52849c70380b4af20fa57e75.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Mar 2018 23:22:58 GMT
+    - Thu, 22 Mar 2018 01:18:24 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=iU7KkhfI3RJM%2Co%2CjyTQfs0; path=/
+    - PHPSESSID=V7lo0Lq5VtVPX7MRkcaPj2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Mar 2018 23:22:58 GMT
+recorded_at: Thu, 22 Mar 2018 01:18:24 GMT
