--- a/www.nass.gov.ng/759dfaafa03b20bb35c0feda45c2088075e75818.yml
+++ b/www.nass.gov.ng/759dfaafa03b20bb35c0feda45c2088075e75818.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Mar 2018 23:27:47 GMT
+    - Thu, 22 Mar 2018 01:23:54 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=uX-mljvL%2CkmNw%2C-m0RkMD1; path=/
+    - PHPSESSID=A8UbTWtuLIqY8snpkNK5a1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Mar 2018 23:27:48 GMT
+recorded_at: Thu, 22 Mar 2018 01:23:54 GMT
