--- a/www.nass.gov.ng/3d53824c71aba25dd3d6925f09a8129ea89ec7ae.yml
+++ b/www.nass.gov.ng/3d53824c71aba25dd3d6925f09a8129ea89ec7ae.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Mar 2018 23:35:00 GMT
+    - Thu, 22 Mar 2018 01:29:37 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=7jZWa%2C6uK53N5picOkBEB0; path=/
+    - PHPSESSID=Fp%2CkUHWpB2AYEXElG3OcB0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Mar 2018 23:35:00 GMT
+recorded_at: Thu, 22 Mar 2018 01:29:37 GMT
