--- a/www.nass.gov.ng/ab4a2e078f74117aac5ca20280e5030e1a01226a.yml
+++ b/www.nass.gov.ng/ab4a2e078f74117aac5ca20280e5030e1a01226a.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Mar 2018 23:40:15 GMT
+    - Thu, 22 Mar 2018 01:34:45 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=dG96PJMTPuJ319-4IPQuZ1; path=/
+    - PHPSESSID=hhAd3%2CJn2AWYO7b7ULrQh1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Mar 2018 23:40:15 GMT
+recorded_at: Thu, 22 Mar 2018 01:34:45 GMT
