--- a/www.nass.gov.ng/e028ce3e446d0f58128bad4349b233e70345ee9e.yml
+++ b/www.nass.gov.ng/e028ce3e446d0f58128bad4349b233e70345ee9e.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Mar 2018 23:41:38 GMT
+    - Thu, 22 Mar 2018 01:36:36 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Jqwr7FuJRvqaAO4e4O04e0; path=/
+    - PHPSESSID=xUlc2j30uxh3C8MBSlLc%2C2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Mar 2018 23:41:38 GMT
+recorded_at: Thu, 22 Mar 2018 01:36:36 GMT
