--- a/www.nass.gov.ng/d13e4fd468fc90b93827386112a06d6b10c10891.yml
+++ b/www.nass.gov.ng/d13e4fd468fc90b93827386112a06d6b10c10891.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Mar 2018 23:56:36 GMT
+    - Thu, 22 Mar 2018 01:47:39 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=U8Ahoqkt6DcPDcVYY7ep43; path=/
+    - PHPSESSID=ZW1omtW4qL%2C58TqcwK5o30; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Mar 2018 23:56:36 GMT
+recorded_at: Thu, 22 Mar 2018 01:47:39 GMT
