--- a/www.nass.gov.ng/2acbe05d387e5796acf40f0cde81ab2ad40ea3f6.yml
+++ b/www.nass.gov.ng/2acbe05d387e5796acf40f0cde81ab2ad40ea3f6.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 21 Mar 2018 00:07:17 GMT
+    - Thu, 22 Mar 2018 01:55:42 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=NnHYbnPmPwTtE23rPmXEE2; path=/
+    - PHPSESSID=BH1a7lcC%2CCAEH93necY5J2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 21 Mar 2018 00:07:17 GMT
+recorded_at: Thu, 22 Mar 2018 01:55:42 GMT
