--- a/www.nass.gov.ng/9a333c17d31253c1b997daf0bf4c20afb83ee9ca.yml
+++ b/www.nass.gov.ng/9a333c17d31253c1b997daf0bf4c20afb83ee9ca.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 21 Mar 2018 00:09:15 GMT
+    - Thu, 22 Mar 2018 01:58:07 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Q0RqH4hGVmaTEPX0FueVH0; path=/
+    - PHPSESSID=u9d%2CeL0p78uK6jjvzhQM92; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 21 Mar 2018 00:09:15 GMT
+recorded_at: Thu, 22 Mar 2018 01:58:08 GMT
