--- a/www.nass.gov.ng/ff615ca735e0d91b5c41dfa11210a2e71021fc22.yml
+++ b/www.nass.gov.ng/ff615ca735e0d91b5c41dfa11210a2e71021fc22.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 21 Mar 2018 00:13:38 GMT
+    - Thu, 22 Mar 2018 02:02:19 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Wu4YV4mvIdB7fH9Ohdn952; path=/
+    - PHPSESSID=GKIOPeWl0IPb5M%2Cxp2f7R3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 21 Mar 2018 00:13:38 GMT
+recorded_at: Thu, 22 Mar 2018 02:02:19 GMT
