--- a/www.nass.gov.ng/7a2da2d9faeade71beb122830caf9f7f9fc82888.yml
+++ b/www.nass.gov.ng/7a2da2d9faeade71beb122830caf9f7f9fc82888.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 21 Mar 2018 00:15:01 GMT
+    - Thu, 22 Mar 2018 02:03:11 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=qiTEykHuUkqGSUQsRMmtQ3; path=/
+    - PHPSESSID=aoNCWjoHv8%2CsiOPW-0gcT2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 21 Mar 2018 00:15:01 GMT
+recorded_at: Thu, 22 Mar 2018 02:03:11 GMT
