--- a/www.nass.gov.ng/fbb71a0f8cc69d2637340ee7491329289599c9be.yml
+++ b/www.nass.gov.ng/fbb71a0f8cc69d2637340ee7491329289599c9be.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 21 Mar 2018 00:15:29 GMT
+    - Thu, 22 Mar 2018 02:04:05 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=wtTfKmSWABSE%2C-rzlDidi1; path=/
+    - PHPSESSID=w%2C5TSwkX9vN7Q4cX72ITN2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 21 Mar 2018 00:15:29 GMT
+recorded_at: Thu, 22 Mar 2018 02:04:06 GMT
