--- a/www.nass.gov.ng/49a6cd159ab5a85819e2996833bc115735063aff.yml
+++ b/www.nass.gov.ng/49a6cd159ab5a85819e2996833bc115735063aff.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 21 Mar 2018 00:16:09 GMT
+    - Thu, 22 Mar 2018 02:04:27 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=iM%2C6uVSlc4E6JajzqsIpm0; path=/
+    - PHPSESSID=Zzd4yXHpwLupvrzR5AQA-1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 21 Mar 2018 00:16:09 GMT
+recorded_at: Thu, 22 Mar 2018 02:04:27 GMT
