--- a/www.nass.gov.ng/1319855eddbd757ef3b64f7c0fcba20287599323.yml
+++ b/www.nass.gov.ng/1319855eddbd757ef3b64f7c0fcba20287599323.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 21 Mar 2018 00:19:03 GMT
+    - Thu, 22 Mar 2018 02:07:09 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=PA0AWmezT5NtxwQSNz1Ra3; path=/
+    - PHPSESSID=g9JFULYECrza%2C9vNyYomu3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 21 Mar 2018 00:19:03 GMT
+recorded_at: Thu, 22 Mar 2018 02:07:09 GMT
