200 OK http://www.nass.gov.ng/mp/profile/652

--- a/www.nass.gov.ng/b59a4a3baa7024b19e27b22136ba64f6330e2812.yml
+++ b/www.nass.gov.ng/b59a4a3baa7024b19e27b22136ba64f6330e2812.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 21 Mar 2018 00:24:11 GMT
+    - Thu, 22 Mar 2018 02:12:01 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=eG7EKAt%2C5Tpmz6Amz7tCf3; path=/
+    - PHPSESSID=kVuFnEBNKB6DOv6m1DSlE1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 21 Mar 2018 00:24:12 GMT
+recorded_at: Thu, 22 Mar 2018 02:12:01 GMT
