--- a/www.nass.gov.ng/6b02c07ddc216a70c52f73dfbafbe4f429852223.yml
+++ b/www.nass.gov.ng/6b02c07ddc216a70c52f73dfbafbe4f429852223.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 21 Mar 2018 00:24:54 GMT
+    - Thu, 22 Mar 2018 02:13:25 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=qxd9ul9kPmn0U4fHHgoNa2; path=/
+    - PHPSESSID=J3t6XUweKa1tC%2CargOIJp1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 21 Mar 2018 00:24:54 GMT
+recorded_at: Thu, 22 Mar 2018 02:13:25 GMT
