--- a/www.nass.gov.ng/86f525e963fdf06247078dfaa809105ca65ca552.yml
+++ b/www.nass.gov.ng/86f525e963fdf06247078dfaa809105ca65ca552.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 21 Mar 2018 00:26:08 GMT
+    - Thu, 22 Mar 2018 02:14:28 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=t%2Ca8fNtDfvd5IW%2CkLhx9l1; path=/
+    - PHPSESSID=oPScamNK53I1s0e-aIzUk3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 21 Mar 2018 00:26:08 GMT
+recorded_at: Thu, 22 Mar 2018 02:14:29 GMT
