--- a/www.nass.gov.ng/90ac8575dbc443d582d2dec000b26bbf2a8aa6bb.yml
+++ b/www.nass.gov.ng/90ac8575dbc443d582d2dec000b26bbf2a8aa6bb.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 21 Mar 2018 00:33:43 GMT
+    - Thu, 22 Mar 2018 02:22:42 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=j6%2CHE0me8lXMSkGdFUAQa1; path=/
+    - PHPSESSID=dG%2CJKwEPv8U2y0UCht2EX3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 21 Mar 2018 00:33:43 GMT
+recorded_at: Thu, 22 Mar 2018 02:22:42 GMT
