--- a/www.nass.gov.ng/8fccdad904b9832447cfda8d0c5d44f2b74d77d2.yml
+++ b/www.nass.gov.ng/8fccdad904b9832447cfda8d0c5d44f2b74d77d2.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 21 Mar 2018 00:34:49 GMT
+    - Thu, 22 Mar 2018 02:24:20 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=G1lHF-H9NnwOv1Zmq%2Cmnr1; path=/
+    - PHPSESSID=AbwkMUQatLWTrTnP3NW1b2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 21 Mar 2018 00:34:49 GMT
+recorded_at: Thu, 22 Mar 2018 02:24:20 GMT
