--- a/www.nass.gov.ng/20e4b61e1a0f88d67ffd9eca7011e8010360a1cb.yml
+++ b/www.nass.gov.ng/20e4b61e1a0f88d67ffd9eca7011e8010360a1cb.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 21 Mar 2018 00:39:54 GMT
+    - Thu, 22 Mar 2018 02:30:14 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=W8JK-TUXmQAtexyVM%2CtH10; path=/
+    - PHPSESSID=hWto6WbxElo9GhvQO2jjg0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 21 Mar 2018 00:39:54 GMT
+recorded_at: Thu, 22 Mar 2018 02:30:14 GMT
