--- a/www.nass.gov.ng/62457ac9595d6e8193d01b8820d72e7714ec44dd.yml
+++ b/www.nass.gov.ng/62457ac9595d6e8193d01b8820d72e7714ec44dd.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 21 Mar 2018 00:40:58 GMT
+    - Thu, 22 Mar 2018 02:31:51 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=eOLerYVbcD%2C5Mj2n6z3fk2; path=/
+    - PHPSESSID=TZwYYPYya2hWwMGMoS3IW1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 21 Mar 2018 00:40:58 GMT
+recorded_at: Thu, 22 Mar 2018 02:31:51 GMT
