--- a/www.nass.gov.ng/2d90a7ba621d2483d535fbde4380ef3caad8604f.yml
+++ b/www.nass.gov.ng/2d90a7ba621d2483d535fbde4380ef3caad8604f.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 21 Mar 2018 00:43:40 GMT
+    - Thu, 22 Mar 2018 02:35:32 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=xm6BMj8%2CQVg8VlDZj6IUJ1; path=/
+    - PHPSESSID=ZPoi5dcZ-xPmKj24JbHFv1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 21 Mar 2018 00:43:40 GMT
+recorded_at: Thu, 22 Mar 2018 02:35:32 GMT
