--- a/www.nass.gov.ng/91901a0336a9767d3a0a842bd43c10182e65f2d3.yml
+++ b/www.nass.gov.ng/91901a0336a9767d3a0a842bd43c10182e65f2d3.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 21 Mar 2018 00:52:36 GMT
+    - Thu, 22 Mar 2018 02:45:43 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=3qd%2CVhG8W9tKnblA4KsjU1; path=/
+    - PHPSESSID=w8PLLcvn2X3KWQ-FO7M5R1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 21 Mar 2018 00:52:36 GMT
+recorded_at: Thu, 22 Mar 2018 02:45:43 GMT
