--- a/www.nass.gov.ng/0eda65d8038f7b38233f653a318bbc231821b692.yml
+++ b/www.nass.gov.ng/0eda65d8038f7b38233f653a318bbc231821b692.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 21 Mar 2018 00:53:33 GMT
+    - Thu, 22 Mar 2018 02:47:43 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=l9NapbnXbfZxVs3dyq4ec3; path=/
+    - PHPSESSID=9HCsQAan6ABhm-XK%2CAVu%2C0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 21 Mar 2018 00:53:33 GMT
+recorded_at: Thu, 22 Mar 2018 02:47:44 GMT
