--- a/www.nass.gov.ng/5bacf92e04e954fe8d6f24b600b02ca2207f5338.yml
+++ b/www.nass.gov.ng/5bacf92e04e954fe8d6f24b600b02ca2207f5338.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 21 Mar 2018 00:56:32 GMT
+    - Thu, 22 Mar 2018 02:50:39 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=fN669K2MrlY2WAOwzIFlf0; path=/
+    - PHPSESSID=sew-1poZwHh1sQSmRhO%2C%2C0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 21 Mar 2018 00:56:33 GMT
+recorded_at: Thu, 22 Mar 2018 02:50:40 GMT
