--- a/www.nass.gov.ng/207a46d925fc4b4f5cbd9e7584ef3890bdefe634.yml
+++ b/www.nass.gov.ng/207a46d925fc4b4f5cbd9e7584ef3890bdefe634.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 21 Mar 2018 00:56:51 GMT
+    - Thu, 22 Mar 2018 02:51:14 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=XxN5Ph9em2vxepFhAQo3w1; path=/
+    - PHPSESSID=u19P3KH6XkyMO8%2CcQ2bn13; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 21 Mar 2018 00:56:51 GMT
+recorded_at: Thu, 22 Mar 2018 02:51:14 GMT
