--- a/www.nass.gov.ng/7443f39aa69de93e5350eeb66edecba0b5c51979.yml
+++ b/www.nass.gov.ng/7443f39aa69de93e5350eeb66edecba0b5c51979.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 21 Mar 2018 01:04:32 GMT
+    - Thu, 22 Mar 2018 03:00:07 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=KP01mJ99fx5NdsDSFa%2Cku1; path=/
+    - PHPSESSID=%2CtimqkNOwcoyhg3RicTjt3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 21 Mar 2018 01:04:32 GMT
+recorded_at: Thu, 22 Mar 2018 03:00:08 GMT
