--- a/www.nass.gov.ng/7add2754d0bc7d3fddaece95e60a7eac8821cccd.yml
+++ b/www.nass.gov.ng/7add2754d0bc7d3fddaece95e60a7eac8821cccd.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 21 Mar 2018 01:08:36 GMT
+    - Thu, 22 Mar 2018 03:04:42 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=LDyLEWra8xepsdSOM1gsx3; path=/
+    - PHPSESSID=WSxWyqdVh1GreuSi0nR%2C%2C2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 21 Mar 2018 01:08:36 GMT
+recorded_at: Thu, 22 Mar 2018 03:04:42 GMT
