--- a/www.nass.gov.ng/120265e3af1963b3f01bce8244da64988abfab43.yml
+++ b/www.nass.gov.ng/120265e3af1963b3f01bce8244da64988abfab43.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 21 Mar 2018 22:11:14 GMT
+    - Thu, 22 Mar 2018 12:49:15 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=zgJUmN%2CqLzeFjggEGmOve1; path=/
+    - PHPSESSID=W9qWjTIOcS-PDzwj3BBh22; path=/
     Vary:
     - Accept-Encoding
     Content-Type:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 21 Mar 2018 22:11:15 GMT
+recorded_at: Thu, 22 Mar 2018 12:49:16 GMT
