200 OK http://www.nass.gov.ng/mp/profile/973

--- a/www.nass.gov.ng/a6d291e613e1afe928211944b971f6cdc72fc080.yml
+++ b/www.nass.gov.ng/a6d291e613e1afe928211944b971f6cdc72fc080.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 21 Mar 2018 23:37:01 GMT
+    - Thu, 22 Mar 2018 14:14:07 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=aFAQ6ojxjqj1%2CR6XEYNCU2; path=/
+    - PHPSESSID=9-chpehbedrqsU9fYneLx1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 21 Mar 2018 23:37:01 GMT
+recorded_at: Thu, 22 Mar 2018 14:14:08 GMT
