200 OK http://www.nass.gov.ng/mp/profile/930

--- a/www.nass.gov.ng/b317aaacb0731e9f3d8deaa4413c35b8ceaa3f60.yml
+++ b/www.nass.gov.ng/b317aaacb0731e9f3d8deaa4413c35b8ceaa3f60.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Mar 2018 14:27:22 GMT
+    - Fri, 23 Mar 2018 06:42:07 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=P2ays9QlDAFZrU44eA8%2CY2; path=/
+    - PHPSESSID=CWIBjPoXrVh%2Cht0KrWK6K3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Mar 2018 14:27:22 GMT
+recorded_at: Fri, 23 Mar 2018 06:42:07 GMT
