200 OK http://www.nass.gov.ng/mp/profile/777

--- a/www.nass.gov.ng/880c79efc08cadb459b40ba1ba756ebb51317503.yml
+++ b/www.nass.gov.ng/880c79efc08cadb459b40ba1ba756ebb51317503.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Mar 2018 14:49:35 GMT
+    - Fri, 23 Mar 2018 07:08:37 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=xiZ3jx-3Ofsi%2CXZGf06oH2; path=/
+    - PHPSESSID=zyW8LkztE4nNDdDpjVBdo2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Mar 2018 14:49:35 GMT
+recorded_at: Fri, 23 Mar 2018 07:08:37 GMT
