200 OK http://www.nass.gov.ng/mp/profile/511

--- a/www.nass.gov.ng/02fea35a6d0d15cf1d8b84174bfa1e38391573da.yml
+++ b/www.nass.gov.ng/02fea35a6d0d15cf1d8b84174bfa1e38391573da.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 23 Mar 2018 05:41:56 GMT
+    - Sat, 24 Mar 2018 22:35:42 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=1rr0OuDqjiwBmID%2CYXYeH3; path=/
+    - PHPSESSID=SKGG67OX-PWFL26CyDiqg0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 23 Mar 2018 05:41:57 GMT
+recorded_at: Sat, 24 Mar 2018 22:35:42 GMT
