200 OK http://www.nass.gov.ng/mp/profile/957

--- a/www.nass.gov.ng/6965475315e169db13a0e880ae64285c08f7a666.yml
+++ b/www.nass.gov.ng/6965475315e169db13a0e880ae64285c08f7a666.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 23 Mar 2018 06:00:19 GMT
+    - Sat, 24 Mar 2018 22:56:44 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=kWNux6HMUVdB%2CVNFdLwIA1; path=/
+    - PHPSESSID=1HL%2CTr1j1TovY4M1466Hr2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 23 Mar 2018 06:00:19 GMT
+recorded_at: Sat, 24 Mar 2018 22:56:44 GMT
